text overlap fixed

--- a/styles.css
+++ b/styles.css
@@ -20,23 +20,22 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5em 2em;
+  padding: 2em 2em;
   color: #cdc6be;
   mix-blend-mode: difference;
-  z-index: 100;
+  z-index: 999;
 }
 
 
 
-.burger {
+nav .burger {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1.7em 2em 1.5em 2em;
   background: rgba(255, 255,255, 0);
   outline: none;
   border: none;
-  width: 28px;
+  width: 42px;
   height: 20px;
   transition: all 250ms ease-out;
   cursor: pointer;
@@ -79,7 +78,7 @@ nav {
   background: #141412;
   clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   will-change: transform;
-  z-index: 50;
+  z-index: 101;
 }
 
 .overlay-menu {
@@ -94,6 +93,7 @@ nav {
   justify-content: center;
   align-items: center;
   color: white;
+  z-index: 100;
 }
 
 .menu-item {
@@ -138,9 +138,8 @@ nav {
 
 .sub-nav p {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 20px;
+  font-size: calc(16px + 0.5vw);
   color: #cdc6be;
-  margin: 0;
 }
 
 nav h4 {
@@ -305,6 +304,18 @@ a {
   right: 0;
 }
 
+.bottom-overlay-box1,
+.bottom-overlay-box2,
+.bottom-overlay-box3 {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transform: translateY(0);
+  z-index: 200;
+}
+
 .bottom-box1 img,
 .bottom-box2 img,
 .bottom-box3 img {
@@ -326,6 +337,7 @@ a {
   left: 0;
   right: 0;
   padding: 10px;
+  z-index: 100;
 }
 
 .bottom-box2 .details h1 {
@@ -334,6 +346,7 @@ a {
   left: 0;
   right: 0;
   padding: 10px;
+  z-index: 100;
 }
 
 .bottom-box3 .details h1 {
@@ -342,11 +355,11 @@ a {
   left: 0;
   right: 0;
   padding: 10px;
+  z-index: 100;
 }
 
 .details {
   position: absolute;
-  z-index: 10;
   height: 100%;
 }
 
@@ -354,6 +367,9 @@ a {
 @media (min-width: 992px) {
   .menu-item p {
     font-size: 10vw;
+  }
+  .sub-nav p{
+    margin: 0;
   }
 }
 
